--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,9 +14,13 @@ android {
     defaultConfig {
         applicationId "com.example.vitsi"
         minSdk 23
-        targetSdk 32
+        targetSdk 28
         versionCode 1
         versionName "1.0"
+
+        ndk {
+            abiFilters "armeabi-v7a", "x86"
+        }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -107,4 +111,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common-java8:2.3.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+
+    // FFmpeg
+
+    implementation 'nl.bravobit:android-ffmpeg:1.1.7'
+
 }
