--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ buildscript {
     ext {
         kotlin_version = '1.6.0'
     }
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.10'
